[gd_scene load_steps=2 format=3 uid="uid://7iwjera8s382"]

[ext_resource type="Script" uid="uid://bola2epbcmc0q" path="res://scripts/ui/DebugOverlay.gd" id="1_6l12b"]

[node name="DebugOverlay" type="Panel"]
script = ExtResource("1_6l12b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FPSLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="EntityLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MemoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
